add crud school

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
           </a>
         </li>
         <li class="p-2 rounded" routerLinkActive="active">
-          <a class="" [routerLink]="['/school-list']">
+          <a class="" [routerLink]="['/schoolList']">
             <div>
               <i class="bi bi-building"></i>
               &nbsp; Danh sách trường
