--- a/src/app/features/post-login/school-list/school-detail/school-detail.component.html
+++ b/src/app/features/post-login/school-list/school-detail/school-detail.component.html
@@ -1,1 +1,58 @@
-<p>school-detail works!</p>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<h2>Chi tiết trường</h2>
+<div class="row">
+
+  <div class="col-md-6" *ngIf="school">
+    <div class="m-3">
+      <h5>Thông tin trường</h5>
+    </div>
+    <div class="mb-4">
+      <div class="m-3">
+        <p class="text-black-50">Tên trường</p>
+      </div>
+      <div class="m-3">
+        <p class="font-weight-bold">{{school.schoolName}}</p>
+      </div>
+    </div>
+    <div class="mb-4">
+      <div class="m-3">
+        <p class="text-black-50">Địa chỉ</p>
+      </div>
+      <div class="m-3">
+        <p class="font-weight-bold">{{school.exactAddress}}</p>
+      </div>
+
+    </div>
+    <div class="mb-4">
+      <div class="m-3">
+        <p class="text-black-50">Trạng thái</p>
+        <span
+          [class]="school.isActive ? 'badge badge-pill badge-success' : 'badge badge-pill badge-danger'">{{ school.isActive ? "Hoạt động" : "Ngưng hoạt động" }}</span>
+      </div>
+    </div>
+
+
+
+  </div>
+  <div class="col-md-6" *ngIf="principal">
+    <div class="m-3">
+      <h5>Thông tin hiệu trưởng</h5>
+    </div>
+    <div class="mb-4">
+      <div class="m-3">
+        <p class="text-black-50">Email</p>
+      </div>
+      <div class="m-3">
+        <p class="font-weight-bold">{{principal.email}}</p>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<div class="m-3">
+  <button class="btn btn-primary" (click)="onUpdate()">Cập nhật</button>
+
+</div>
