fix assignment submit approve

--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.scss
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.scss
@@ -25,6 +25,7 @@
     &:hover {
         background-color: $primary-hover;
         border-color: $primary-hover;
+        cursor: pointer;
     }
     i {
         color: #fff;
