--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
@@ -84,7 +84,7 @@
       <th>Công việc</th>
       <th>Người tạo</th>
       <th>Hạn nộp</th>
-      <th></th>
+      <th *ngIf="!data.sent"></th>
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-rowData let-rowNode>
@@ -95,8 +95,8 @@
         {{ rowData.node.assignmentName }}
       </td>
       <td>{{ rowData.node.assigner.user.fullName }}</td>
-      <td>{{ rowData.node.deadline | date }}</td>
-      <td class="d-flex">
+      <td>{{ rowData.node.deadline | date : "dd/MM/yyyy" }}</td>
+      <td *ngIf="!data.sent" class="d-flex">
         <div
           class="action-item d-flex justify-content-center align-items-center mx-2"
           (click)="openDetail(rowData.node, 'addchild')"
@@ -117,5 +117,12 @@
         </div>
       </td>
     </tr>
+  </ng-template>
+  <ng-template pTemplate="footer">
+    <div class="p-2">
+      <button [disabled]="data.sent" pButton (click)="sendToSchools()">
+        Gửi template
+      </button>
+    </div>
   </ng-template>
 </p-treeTable>
