--- a/src/app/features/post-login/school-side/assignment/approve-assignment/approve-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/approve-assignment/approve-assignment.component.html
@@ -1,4 +1,13 @@
-<form action=""></form>
+<p-dialog
+  [(visible)]="pdfLoaded"
+  [style]="{ width: '90vw', height: '1080px' }"
+  [draggable]="false"
+  [resizable]="false"
+>
+  <div *ngIf="pdfLoaded">
+    <iframe [src]="safePdfUrl" width="100%" height="650px"></iframe>
+  </div>
+</p-dialog>
 <p-dialog
   header="Chi tiết công việc"
   [(visible)]="assVisible"
@@ -31,9 +40,41 @@
         </div>
         <br />
         <div *ngIf="documents.length > 0">
-          <ng-container *ngFor="let doc of documents">
-            {{ doc.documentCode }}-{{ doc.documentName }}
-            <br />
+          <ng-container *ngFor="let item of documents; let i = index">
+            <div class="row mb-3">
+              <div (click)="openNewTab(item.documentLink)">
+                <div class="file-item px-3 py-1 d-flex">
+                  <div
+                    class="file-item-icon ml-5 d-flex justify-content-center align-items-center"
+                  >
+                    <img src="../../../../../assets/img/pdf.png" alt="" />
+                  </div>
+                  <div class="file-item-content">
+                    <div class="row ms-2">
+                      <div class="col-md-10">
+                        <span class="font-weight-bold font-size-18">{{
+                          item.documentName
+                        }}</span>
+                        <br />
+                        <span
+                          ><span class="font-weight-bold">Mã:</span>
+                          {{ item.documentCode }}</span
+                        >
+                      </div>
+                      <!-- <div class="col-md-2">
+                          <span class="text-black-50">{{
+                            item.sizeFormat || item.file.size
+                          }}</span>
+                          <br />
+                          <span>{{
+                            item.uploadedDate | date : "MM/dd/yyyy"
+                          }}</span>
+                        </div> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </ng-container>
         </div>
       </div>
@@ -132,7 +173,12 @@
         <br />
         <span class="mt-1">
           <form [formGroup]="assignmentForm">
-            <p-dropdown formControlName="status" [options]="statusOptions">
+            <p-dropdown
+              dataKey="value"
+              formControlName="status"
+              [options]="statusOptions"
+              (onChange)="onChangeStatus($event)"
+            >
               <ng-template let-option pTemplate="selectedItem">
                 <p-tag
                   class="status"
