--- a/src/app/features/post-login/school-side/assignment/submit-assignment/submit-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/submit-assignment/submit-assignment.component.html
@@ -1,5 +1,15 @@
 <h2>Công việc cần nộp</h2>
 <!-- <form formGroupName=""> -->
+<p-dialog
+  [(visible)]="pdfLoaded"
+  [style]="{ width: '90vw', height: '1080px' }"
+  [draggable]="false"
+  [resizable]="false"
+>
+  <div *ngIf="pdfLoaded">
+    <iframe [src]="safePdfUrl" width="100%" height="650px"></iframe>
+  </div>
+</p-dialog>
 <div class="submit-assignment">
   <p-dialog
     header="Tải file"
@@ -107,6 +117,7 @@
               <span class="text-black-50">Tài liệu</span>
             </div>
             <div
+              *ngIf="selectedAssignment.status.statusId != 17"
               class="add-file-item d-flex align-items-center justify-content-center"
               (click)="addDocument()"
             >
@@ -114,7 +125,11 @@
             </div>
           </div>
           <br />
-          <div *ngIf="documents.length > 0">
+          <div
+            *ngIf="
+              documents.length > 0 && selectedAssignment.status.statusId != 17
+            "
+          >
             <ng-container *ngFor="let item of documents; let i = index">
               <div class="row mb-3">
                 <div class="col-md-11">
@@ -166,7 +181,54 @@
               </div>
             </ng-container>
           </div>
-          <button pButton [disabled]="documents.length == 0">
+          <div
+            *ngIf="
+              documents.length > 0 && selectedAssignment.status.statusId == 17
+            "
+          >
+            <ng-container *ngFor="let item of documents; let i = index">
+              <div class="row mb-3">
+                <div (click)="openNewTab(item.documentLink)">
+                  <div class="file-item px-3 py-1 d-flex">
+                    <div
+                      class="file-item-icon ml-5 d-flex justify-content-center align-items-center"
+                    >
+                      <img src="../../../../../assets/img/pdf.png" alt="" />
+                    </div>
+                    <div class="file-item-content">
+                      <div class="row ms-2">
+                        <div class="col-md-10">
+                          <span class="font-weight-bold font-size-18">{{
+                            item.documentName
+                          }}</span>
+                          <br />
+                          <span
+                            ><span class="font-weight-bold">Mã:</span>
+                            {{ item.documentCode }}</span
+                          >
+                        </div>
+                        <!-- <div class="col-md-2">
+                            <span class="text-black-50">{{
+                              item.sizeFormat || item.file.size
+                            }}</span>
+                            <br />
+                            <span>{{
+                              item.uploadedDate | date : "MM/dd/yyyy"
+                            }}</span>
+                          </div> -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </ng-container>
+          </div>
+          <button
+            *ngIf="selectedAssignment.status.statusId != 17"
+            pButton
+            [disabled]="documents.length == 0"
+            (click)="sendFiles()"
+          >
             Lưu thay đổi
           </button>
         </div>
@@ -264,7 +326,11 @@
           <span class="text-black-50">Trạng thái</span>
           <br />
           <span class="mt-1">
-            <p-tag class="status" [severity]="'info'" [rounded]="true">
+            <p-tag
+              class="status"
+              [severity]="getStatusSeverity(selectedAssignment.status.statusId)"
+              [rounded]="true"
+            >
               {{ selectedAssignment.status.statusName }}
             </p-tag>
           </span>
