--- a/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.html
@@ -3,7 +3,7 @@
 <div class="card">
   <p-table
     #dt
-    [value]="inspectionplanlist"
+    [value]="inspectionPlanList"
     dataKey="id"
     [rowHover]="true"
     [rows]="7"
@@ -25,9 +25,6 @@
             placeholder="Tìm kiếm"
           />
         </span>
-        <p-button (click)="navigateToCreateInspectionPlan()" class="btn-purple"
-          >Tạo mới</p-button
-        >
       </div>
     </ng-template>
     <ng-template pTemplate="header">
@@ -103,7 +100,6 @@
           >
             <i
               class="fa-solid fa-circle-info"
-              (click)="navigateToDetail(inspectionplan.id)"
             ></i>
           </div>
           <div
@@ -111,7 +107,6 @@
           >
             <i
               class="fa-solid fa-pencil"
-              (click)="navigateToUpdate(inspectionplan.id)"
             ></i>
           </div>
         </td>
