--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -1,19 +1,23 @@
 <p-dialog
   header="Chi tiết công việc"
   [(visible)]="assignmentVisible"
-  [style]="{ width: '70vw', height: '760px' }"
+  [style]="{ width: '70vw', height: '1080px' }"
   [draggable]="false"
   [resizable]="false"
   (onHide)="assignmentPopuptHideEvent()"
 >
   <form [formGroup]="assignmentForm">
     <div *ngIf="selectedAssignment && action == 'addchild'" class="mb-2">
-      <span class="mb-1">Thuộc</span>
+      <span class="mb-1 font-weight-bold">Thuộc</span>
       <br />
       <span class="text-black-50">{{ selectedAssignment.assignmentName }}</span>
+      <br />
+      <span class="mb-1 font-weight-bold">Loại công việc</span>
+      <br />
+      <p-dropdown [options]="typeAssignmentOptions"></p-dropdown>
     </div>
     <div class="mb-2">
-      <span class="mb-1">Tên công việc</span>
+      <span class="mb-1 font-weight-bold">Tên công việc</span>
       <br />
       <input
         class="mb-1"
@@ -23,18 +27,39 @@
       />
     </div>
     <div class="mb-2">
-      <span class="mb-1">Mô tả chi tiết</span>
+      <span class="mb-1 font-weight-bold">Mô tả chi tiết</span>
       <br />
       <textarea
         class="mb-1"
-        rows="5"
+        rows="3"
         pInputTextarea
         formControlName="description"
       ></textarea>
     </div>
-
-    <div class="mb-5">
-      <span class="mb-1">Hạn nộp</span><br />
+    <div class="mb-2">
+      <span class="mb-1 font-weight-bold">Người làm</span>
+      <br />
+      <p-dropdown [options]="listOfPossibleAssginees">
+        <ng-template let-option pTemplate="selectedItem">
+          <div>
+            <span> {{ option.user.fullName }} </span>&nbsp;<span
+              class="text-black-50"
+            >
+              {{ option.email }}</span
+            >
+          </div>
+        </ng-template>
+        <ng-template let-option pTemplate="item">
+          <div>
+            <span> {{ option.user.fullName }} </span>&nbsp;<span>
+              {{ option.email }}</span
+            >
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div>
+    <div class="mb-4">
+      <span class="mb-1 font-weight-bold">Hạn nộp</span><br />
       <!-- <p-calendar formControlName="deadline" [showIcon]="true"></p-calendar> -->
       <input pInputText type="date" formControlName="deadline" />
     </div>
@@ -84,7 +109,12 @@
     <tr [ttRow]="rowNode">
       <td class="folder">
         <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
-        <i class="bi bi-folder-fill"></i>
+        <ng-container *ngIf="rowData.node.task">
+          <i class="bi bi-file-earmark-check-fill file-icon"></i>
+        </ng-container>
+        <ng-container *ngIf="!rowData.node.task">
+          <i class="bi bi-folder-fill folder-icon"></i>
+        </ng-container>
         {{ rowData.node.assignmentName }}
       </td>
       <td>{{ rowData.node.assigner.user.fullName }}</td>
