--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
@@ -33,8 +33,11 @@
     }
 }
 .folder {
-    i {
+    .folder-icon {
         color: rgb(255, 196, 0);
+    }
+    .file-icon {
+        color: $primary;
     }
 }
 :host ::ng-deep {
@@ -49,4 +52,17 @@
             border-color: $primary-hover;
         }
     }
+    .p-dropdown {
+        width: 100%;
+        border-radius: 8px;
+    }
+    ul {
+        padding: 0;
+    }
+}
+.font-weight-bold {
+    font-weight: 500;
+}
+.font-size-18 {
+    font-size: 18px;
 }
