add user list, user detail, create user

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -32,7 +32,7 @@
           </a>
         </li>
         <li class="p-2 rounded" routerLinkActive="active">
-          <a class="" [routerLink]="['/userlist']">
+          <a class="" [routerLink]="['/userList']">
             <div>
               <i class="bi bi-people"></i>
               &nbsp; Danh sách người dùng
@@ -68,6 +68,14 @@
             <div>
               <i class="bi bi-clipboard2-check"></i>
               &nbsp; Kết luận
+            </div>
+          </a>
+        </li>
+        <li class="p-2 rounded" routerLinkActive="active">
+          <a class="" [routerLink]="['/guidanceDocument']">
+            <div>
+              <i class="bi bi-clipboard2-check"></i>
+              &nbsp; Văn bản chỉ đạo
             </div>
           </a>
         </li>
