--- a/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -6,42 +6,50 @@
     <div class="list-inspector-header px-3 text-center">
       <h5 class="mx-auto mt-2">Danh sách thanh tra</h5>
       <div class="total">
-        <span class="mx-auto">Tổng số: {{ selectedInspectors.length}}</span>
+        <span class="mx-auto">Tổng số:</span>
       </div>
     </div>
 
     <div class="card mt-2 flex-fill">
       <div class="scrollable-container overflow-auto d-flex flex-column justify-content-between h-100">
         <ng-container *ngFor="let item of selectedInspectors; let i = index">
-          <div *ngIf="selectedInspectors" class="mt-1" [class.my-2]="toggleChange">
-            <div class="scrollview-item d-flex px-2 h-full" [class.py-2]="toggleChange">
-              <div
-                class="scrollview-item-icon d-flex justify-content-center align-items-center"
-              >
-                <img src="assets/img/user_icon.svg" alt=""/>
-              </div>
-              <div class="scrollview-item-content ms-3">
-                <span class="font-weight-bold">{{ item?.user?.fullName}}</span>
-                <br/>
-                <span class="fw-light">
+          <div *ngIf="selectedInspectors" class="mt-1 my-2">
+            <div class="scrollview-item d-flex flex-row justify-content-between align-items-center p-2 h-full mx-1">
+              <div class=" d-flex flex-row justify-content-center align-items-center">
+                <div class="scrollview-item-icon">
+                  <img src="assets/img/user_icon.svg" alt=""/>
+                </div>
+                <div class="scrollview-item-content ms-3">
+                  <span class="font-weight-bold">{{ item?.user?.fullName}}</span>
+                  <br/>
+                  <span class="fw-light">
                     {{item.roles[0]?.roleName}} -
-                  {{ item.school?.schoolName}}
+                    {{ item.school?.schoolName}}
                   </span>
+                  <div class="chief d-flex flex-row" *ngIf="item.chief">
+                    <i class="bi bi-person-badge"></i>
+                    <label class="form-check-label ms-2">
+                      - Trưởng phòng
+                    </label>
+                  </div>
+                </div>
               </div>
-              <div class="scroll-view-chief">
-
+              <div class="" *ngIf="deleteButtonVisibility">
+                <button type="button" class="delete-button" (click)="onDeleteInspector(i)">
+                  <i class="bi bi-trash-fill"></i>
+                </button>
               </div>
-            </div>
-            <div class="w-100 text-center" *ngIf="deleteButtonVisibility">
-              <button type="button" class="delete-button w-100" (click)="onDeleteInspector(i)">
-                <i class="bi bi-trash-fill"></i>
-              </button>
             </div>
           </div>
         </ng-container>
       </div>
     </div>
-    <div class="w-100 d-flex justify-content-center my-2" *ngIf="listEditable">
+    <div class="w-100 d-flex justify-content-center my-1" *ngIf="listEditable">
+      <div *ngIf="toggleChange">
+        <button type="button" pButton class="create-inspector"
+                (click)="changeToggleStatus()">Chỉnh sửa ban KTNB
+        </button>
+      </div>
       <div *ngIf="!toggleChange" class="w-100 px-1 d-flex flex-row justify-content-between align-items-center">
         <button type="button" pButton class="create-inspector px-4" (click)="onReset()">
           Hủy
@@ -54,10 +62,5 @@
         </button>
       </div>
     </div>
-  </div>
-  <div *ngIf="toggleChange && listEditable" class="mt-2 text-center">
-    <button type="button" pButton class="create-inspector"
-            (click)="changeToggleStatus()">Chỉnh sửa ban kiểm tra
-    </button>
   </div>
 </ng-template>
