--- a/src/app/features/post-login/inspection-plan-list/update-inspection-plan/update-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan-list/update-inspection-plan/update-inspection-plan.component.html
@@ -42,11 +42,21 @@
             formControlName="description"
           ></textarea>
         </div>
-        <div class="inspection-plan-school mb-3 col-md-6 pe-3">
-          <label class="fw-medium">Trường kiểm tra</label>
-          <select title="schoolList" class="form-select" disabled>
-            <option selected value="0">{{inspectionPlanDetail?.inspectionPlan?.school?.schoolName}}</option>
-          </select>
+        <div class="inspection-plan-school mb-3 row">
+          <div class="col-md-6">
+            <label class="fw-medium">Trường kiểm tra</label>
+            <select title="schoolList" class="form-select" disabled>
+              <option selected value="0">{{inspectionPlanDetail?.inspectionPlan?.school?.schoolName}}</option>
+            </select>
+          </div>
+          <div class="col-md-6">
+            <label class="fw-medium">Trưởng đoàn kiểm tra</label>
+            <p-dropdown class="full-width-dropdown" [options]="inspectorList" formControlName="chiefId"
+                        optionLabel="user.fullName"
+                        [filter]="true" filterBy="user.fullName" optionValue="accountId" [showClear]="true"
+                        placeholder="{{chiefInspector[0].user?.fullName}}">
+            </p-dropdown>
+          </div>
         </div>
         <div class="row mb-3">
           <div class="col-md-3">
@@ -101,7 +111,8 @@
               Cập nhật tài liệu
             </button>
           </div>
-          <div [@slideInOut]="documentUpdated ? 'in' :'out'" class="document-item px-2 pt-2 mx-4" formGroupName="documentInspectionPlanDto">
+          <div [@slideInOut]="documentUpdated ? 'in' :'out'" class="document-item px-2 pt-2 mx-4"
+               formGroupName="documentInspectionPlanDto">
             <ng-template ngIf="documentUpdated === 'in'">
               <div class="col-md-12 d-flex flex-row">
                 <div class="col-md-8 pe-3">
