--- a/src/app/features/post-login/inspection-plan-list/update-inspection-plan/update-inspection-plan.component.scss
+++ b/src/app/features/post-login/inspection-plan-list/update-inspection-plan/update-inspection-plan.component.scss
@@ -4,6 +4,11 @@
   font-size: 16px;
 }
 
+::ng-deep .p-dropdown{
+  width: 100%;
+  border-radius: 8px;
+}
+
 .spinner {
   width: 100%;
   height: 100%;
