--- a/src/app/features/post-login/school-side/assignment/submit-assignment/submit-assignment.component.scss
+++ b/src/app/features/post-login/school-side/assignment/submit-assignment/submit-assignment.component.scss
@@ -44,9 +44,19 @@ ul {
     padding: 0;
 }
 :host ::ng-deep {
-    // .p-component {
-    //     font-size: 16px;
-    // }
+    .p-button {
+        background-color: $primary;
+        border-radius: 8px;
+        border: solid 1px $primary;
+        transition: all 0.5s ease;
+        &:hover {
+            background-color: $primary-hover;
+            border-color: $primary-hover;
+        }
+    }
+    .p-confirm-dialog-reject {
+        margin-right: 20px;
+    }
     .p-dropdown {
         width: 100%;
     }
